Switched i class to object for phone viewing fix.

--- a/resume.html
+++ b/resume.html
@@ -29,13 +29,18 @@
     </header>
     <main>
         <section>
-            <h1  class="sub-title">Resume</h1>
-            <a href="media/resume.pdf" class="btn btn2" target="_blank">
-                </i> Download Resume.pdf <i class='bx bx-download'></i>
+            <h1 class="sub-title">Resume</h1>
+            <a href="media/resume_SE.pdf" class="btn btn2" target="_blank">
+                Download Resume.pdf <i class='bx bx-download'></i>
             </a>
-            <embed src="media/resume.pdf" width="100%" height="1100" type="application/pdf">
+            <div class="pdf-container">
+                <object data="media/resume_SE.pdf" type="application/pdf" width="100%" height="1100">
+                    <p>Your browser does not support PDF embedding. You can <a href="media/resume.pdf" target="_blank">download the PDF</a> instead.</p>
+                </object>
+            </div>
         </section>
     </main>
+    
     <footer class="copyright">
         <p>&copy; Devanshi.</p>
     </footer> 
