Added a cute monkey in the footer.

--- a/labexperiments.html
+++ b/labexperiments.html
@@ -152,8 +152,14 @@
             <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40">
         </a>
     </aside>
-    <footer>
-        <p>&copy; 2023 Devanshi Jain</p>
-    </footer>
+    <footer class="copyright">
+        <p>&copy; Devanshi <img src="icons/440-monkey.svg.png" alt="Cute Monkey" width="25" height="25" style="vertical-align: text-bottom;">
+            <div class="footer-icons">
+                <a href="https://github.com/devanshi-jain"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/djain18/"><i class='bx bxl-linkedin'></i></a>
+                <a href="mailto:djain@ucsd.edu"><i class='bx bxl-gmail'></i></a>
+            </div>
+        </p>
+    </footer>    
 </body>
 </html>
