--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
 
 
     <footer class="copyright">
-        <p>&copy; Devanshi.</p>
-    </footer>
+        <p>&copy; Devanshi <img src="icons/440-monkey.svg.png" alt="Cute Monkey" width="25" height="25" style="vertical-align: text-bottom;">
+            <div class="footer-icons">
+                <a href="https://github.com/devanshi-jain"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/djain18/"><i class='bx bxl-linkedin'></i></a>
+                <a href="mailto:djain@ucsd.edu"><i class='bx bxl-gmail'></i></a>
+            </div>
+        </p>
+    </footer>    
     </body>
 </html>
