Logo updated tentatively.

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header class = "header">
-        <a href="#" class="logo-rest">Devanshi Jain</a>
+        <a href="index.html" class="logo-rest">DJ</a>
         
         <input type="checkbox" id="toggle-menu" class="side-menu">
         <label for="toggle-menu" class="hamb">
